APP/NewYellowPage/www/css/index.css
.custom-navbar ul li a {
    background: #4B0082 !important; 
    color: white !important;
    border-style: none;
    font-size: large !important;
}

/*override jQuery Mobile*/
.ui-content {
    overflow-x: visible;
    padding: 0px;
    padding-left: 3.7VW;
}

.header-style {
    background-color: #492f7f;
}
.ui-content .ui-listview {
    margin: 0px;
}

.ui-listview > .ui-li-static {
    padding: 0px;
    white-space: normal;
}

.ui-popup-container {
    width: 80%;
}

#detail-data .ui-btn {
    border: none;
}

#myPhonebookList .ui-checkbox input {
    width: 14px;
    height: 14px;
    margin: 0px;
    margin: 0 auto;
}

#myPhonebookList .ui-checkbox {
    margin: 0px;
    top: 5px;
    left: 35%;
    display: none;
}

#myPhonebookList p {
    margin: 0px 2px;
    font-size: 12px;
}

.header-style .ui-bar {
    padding: 0;
}

/*new class*/
#viewQueryResult{
    background-color: #f8f9f9;
}

#viewDetailInfo{
    background-color: white;   
}

.vice-header {
    background-color: #f8f9f9;
    height: 5.7VH;
    margin-top: 0px;
    padding: 0;
    line-height: 6VH;
}

.vice-header .title {
    font-family: Arial;
    color: #666667;
    font-size: 2.3VH;
    font-weight: bold;
}

.vice-header .name-tel {
    margin-left: 3.7VW !important;
    text-align: left;
}

.vice-header .company {
    width: 30%;
}

.vice-header .e-name {
    width: 40%;
}

.vice-header .c-name {
    width: 30%;
}

.hide {
    display: none;
}

.head-btn{
    background-color: initial !important;
    border-style: none;
    left: initial !important;
    margin-left: 3.7VW !important;
    margin-right: 3.7VW !important;
    margin-top: 8px !important;
    padding: 0px;
}

.page-header {
    height : 40px !important;
}

#viewIndex .ui-content > div{
    float: left;
}

.q-result-grid {
    text-align: center;
}

.q-result-grid > li div {
    float: left;
    /*display: flex;*/
    flex-flow: column wrap;
    justify-content: center;
    overflow-wrap: break-word;
}

.q-result-grid > li p {
    width: 95%;
    font-weight: normal;
    white-space: normal;
    text-overflow: clip;
    overflow: auto;
}

.q-result-grid a {
    text-decoration: none;
}
.error-msg {
    background-color: #f8f9f9;
    color: #eb2326;
    font-size: 2.3VH;
    font-family: Microsoft JhengHei;
    margin-top: 4.3VH;
    text-align: center;
    width: 100%;
}

#employeeData.q-result-grid > li div {
    height: 60px;
}

#employeeData p {
    margin: 0px 2px;
    font-size: 12px;
}

.q-result-grid .company {
    width: 30%;
}

.q-result-grid .e-name {
    width: 40%;
}

.q-result-grid .c-name {
    width: 30%;
}

/**********************  viewDetialInfo  **********************/
#detial-name-title{
    margin-left: 3.7VW;
    margin-top: 2.9VH;
}

#detial-name-title .detial-name{
    color:#0f0f0f;
    width: 100VW;
}

#detial-name-title #eName{
    font-family:Arial; 
    font-size:3VH;
}

#detial-name-title #cName{
    font-family:Microsoft JhengHei; 
    font-size:2.9VH;
    margin-top: 0.4VH;
}

#detial-name-title .star{
    border-style:none;
    float:right; 
    margin-top:-35px; 
    margin-right:8VW; 
    padding: 0;
}

#detail-data .liststyle{
    border-width:1px;
    border-style:none; 
    border-bottom-style:solid;
    border-bottom-color:#989898;
}

#detail-data .item-name{ 
    color: #666667;
    font-size: 2.1VH;
    font-family: Arial, Microsoft JhengHei;
    margin-top: 1.9VH;
    margin-bottom: 0VH;
    width: 100VW;
}

#detail-data .item-content{
    color: #2d87ba;
    font-size: 2.5VH;
    font-family: Arial, Microsoft JhengHei;
    margin-top: 0.3VH;
    margin-bottom: 0.8VH;
    width: 100VW;
}

#detailData.q-result-grid > li div {
    height: 50px;
}

#detailData p {
    margin: 0px 5px;
    font-size: 14px;
    font-weight: bold;
}

#detailData .company-data {
    display: flex;
}

#detailData .company {
    display: inline-block;
    width: 80%;
    padding-top: 2px;
}

#detailData .star {
    display: inline-block;
}

/*.popup-msg {
    height: 100px;
    display: flex;
    flex-flow: column wrap;
    justify-content: center;
    align-items: center;
    color: #FFF;
    background-color: #4B0082;
    font-weight: bold;
}*/

/*.popup-msg .ui-btn {
    padding: 5px 10px;
    background-color: #28004D;
    border: none;
    color: #FFF;
}*/

/* mvpn select popup window for yellow page */
#numSelectPopupWindow #msgTitle{ margin: 0 5%; padding: 5% 0; font-size: 5vw; border-bottom: 1px solid #d4d4d4; position: relative;}
#numSelectPopupWindow ul{ list-style: none; padding: 0;}
#numSelectPopupWindow li{ color:#2d87ba; font-size: 4.5vw; font-family:Arial; font-weight: normal; padding-bottom: 5%;}
#numSelectPopupWindow li:nth-of-type(2){ padding-bottom: 2%;}
#numSelectPopupWindow img{ margin-right: 1.9vw;}
#numPopupCloseBtn{ width: 7%; position: absolute; right: 0; top: 5%;}
#numPopupCloseBtn:after{ content: "\d7"; font-size: 7vw; font-weight: normal;}

